@@ -51,6 +51,11 @@ CHANGES - Current Version:
   object was written with coordinates outside of the file's predefined 
   bounds.  (Causing an overflow of the +/-1e9 integer coord. range)
 
+- Use MI defaults for Pen, Brush, Font, Symbol when creating new objects
+  and when reading objects with no Pen, Brush, etc. set (used to just set
+  everything to zero which was inconsistent with MI's behavior)
+  New defaults are: PEN(1,2,0), BRUSH(2,16777215,16777215), 
+  FONT("Arial",0,0,0), SYMBOL(35,0,12)
 
 Version 1.0.4 - (2000-11-14)
 ----------------------------
@@ -240,5 +245,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.36 2000-11-22 04:06:46 daniel Exp $
+$Id: HISTORY.TXT,v 1.37 2000-11-23 20:47:46 daniel Exp $
 ------------
